fix: grow root element when content overflows

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  min-height: 100%;
+  display: flex;
 }
 
-html, body, #root {
-  height: 100%;
+#root {
+  flex: 1;
 }
